crates/conflate/tests/compile/derive-no-strategy.stderr
error: expected `=`
 --> tests/compile/derive-no-strategy.rs:8:21
  |
8 |     #[merge(strategy)]
  |                     ^
